<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rider</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="weather_no_info">天气正在查询，请稍后</string>
 	<string name="btn_mapenable">地图开关</string>
 	<string name="btn_posquery">位置查询</string>
 	<string name="btn_morefun">更多功能</string>
 	<string name="btn_quit">退出</string>
 	<string name="msg_surequit">确认退出吗？</string>
 	<string name="btn_cancel">取消</string>
 	
 	<string name="btn_beginride">开始骑行</string>
    <string name="btn_ridestat">行程统计</string>
    <string name="btn_setting">软件设置</string>
    
    <string name="btn_share">定时将位置分享到新浪微博</string>
    <string name="btn_go">LET\'S GO!!!</string>
    
     <string name="msg_currcity">当前定位城市：</string>
    
    <string name="btn_lxdt">离线地图</string>
    
    <string name="download_manage">下载管理</string>
    <string name="city_list">城市列表</string>
    
    
    
    <string name="btn_wbzh">微博账号</string>
    <string name="btn_fxrj">分享软件</string>
    <string name="btn_aboutme">关于骑行者</string>
    <string name="btn_sharestat">将统计分享到微博</string>
    <string name="btn_resetstat">重新统计</string>
</resources>
