<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
	android:background="@android:color/black" 
    android:weightSum="3"
     >

    <Button
        android:id="@+id/btn_beginride"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_beginride" 
		android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_ridestat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_ridestat" 
		android:layout_weight="1"
		/>

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_setting" 
		android:layout_weight="1"
        />

</LinearLayout>
