<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4" >

    <LinearLayout
        android:id="@+id/setting_menu_lxdt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_lxdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_lxdt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_menu_wbzh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_wbzh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_wbzh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_menu_fxrj"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_fxrj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_fxrj" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_menu_aboutme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_aboutme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_aboutme" />
    </LinearLayout>

</LinearLayout>